Resolved button spacing  issues

--- a/wwwroot/css/PML_styles.css
+++ b/wwwroot/css/PML_styles.css
@@ -1,12 +1,3 @@
-<!DOCTYPE html >
-<html >
-<head >
-<meta charset="utf-8" / >
-<title > Parking Lot Management System</title >
-<link rel="stylesheet" href="~/css/PML_styles.css" / >
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" > </script >
-<script src="~/js/Plm_script.js" > </script >
-<style >
 /* Global Styles */
 body {
     background-color: #fff;
@@ -55,9 +46,9 @@ body {
     background-color: #4CAF50;
     color: #fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 25px;
     cursor: pointer;
-    margin-right: 10px;
+    margin: 0;
 }
 
     #checkInBtn[disabled] {
@@ -77,13 +68,14 @@ body {
     background-color: #FF8C00;
     color: #fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 25px;
     cursor: pointer;
+    margin-top: 20px;
     margin-bottom: 20px;
     max-width: 200px;
     position: relative;
-    left: 50%;
-    top: 40px;
+    left: 5%;
+    top: 80px;
     transform: translateX(-50%);
 }
 
@@ -224,14 +216,4 @@ tbody tr:nth-child(even) {
 #tagNumberInput {
     flex: 1; /* Take available space */
     margin-right: 10px;
-}
-
-.button-container {
-    display: flex;
-    align-items: center;
-}
-
-#checkInBtn,
-#checkOutBtn {
-    margin: 0;
 }
